# OpenWerewolf

./: .gitignore  README.md  devserver.sh  pyproject.toml
src/: main.py
src/core/: event_system.py  game_engine.py
src/games/werewolf/: game.py  rules.json
src/games/werewolf/roles/: __init__.py  seer.py  villager.py  werewolf.py  witch.py
src/models/: player.py  role.py  room.py
src/utils/: config_parser.py  logger.py  timer.py
