[tool.poetry]
name = "OpenWerewolf"
version = "0.1.0"
description = "An open-source Werewolf Game Framework."
authors = ["Henry GongZY"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
flask-socketio = "^5.5.1"

[tool.poetry.scripts]
app = 'src.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
